--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,25 @@
 astroid==3.1.0
+cfgv==3.4.0
 dill==0.3.8
+distlib==0.3.8
+exceptiongroup==1.2.1
+filelock==3.13.4
+greenlet==3.0.3
+identify==2.5.35
+iniconfig==2.0.0
 isort==5.13.2
 mccabe==0.7.0
+mock-alchemy==0.2.6
+nodeenv==1.8.0
+packaging==24.0
 platformdirs==4.2.0
+pluggy==1.5.0
+pre-commit==3.5.0
 pylint==3.1.0
+pytest==8.1.1
+PyYAML==6.0.1
+SQLAlchemy==2.0.29
 tomli==2.0.1
 tomlkit==0.12.4
 typing-extensions==4.11.0
+virtualenv==20.25.1
