--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.6.0
 astroid==3.1.0
 blinker==1.7.0
 cfgv==3.4.0
@@ -23,6 +24,8 @@ packaging==24.0
 platformdirs==4.2.0
 pluggy==1.5.0
 pre-commit==3.5.0
+pydantic==2.7.1
+pydantic-core==2.18.2
 pylint==3.1.0
 pytest==8.1.1
 pytest-mock==3.14.0
